--- a/partners/templates/offers.html
+++ b/partners/templates/offers.html
@@ -339,10 +339,9 @@ Non perdere l'occasione di entrare a far parte di una delle comunità dedicate a
     </p>
   </section>
   
-
   <div class="row">
 
-  <ul class='prtn-box-container'>
+  <ul class='prtn-box-container prtn-atp'>
      <li class='prtn-box col-sm-6'>
       <div class='prtn-box-inner prtn-box-training' style='height:1050px'>
         <h3>Linux Essentials Approved Training Partner</h3>
@@ -449,9 +448,9 @@ Non perdere l'occasione di entrare a far parte di una delle comunità dedicate a
   </section>
   
   <div class="row">
-    <ul class='prtn-box-container'>
-      <li class='prtn-box col-sm-6'>
-        <div class='prtn-box-inner' style='height:870px'>
+    <ul class='prtn-box-container prtn-aap'>
+      <li class='prtn-box col-sm-3'>
+        <div class='prtn-box-inner' style='height:1290px'>
           <h3>Linux Essentials Academic<br> PARTNER</h3>
           <div class='prtn-box-icon'>
             <img src='{% static "lpi/lpi-aap-le.png" %}'>
@@ -463,7 +462,9 @@ Non perdere l'occasione di entrare a far parte di una delle comunità dedicate a
             IVA esclusa
           </div>
           <div class='prtn-box-desc'>
+            <p>
             Attraverso questo programma il partner pu&ograve; organizzare corsi di certificazione dedicati a Linux Essentials, la certificazione indicata studenti che intendono intraprendere una carriera professionale con Linux.
+            </p>
             <h4>Benefit</h4>
             <ul class='prtn-box-bonus-list'>
                 <li>Disponibilita' utilizzo logo LPI AAP LE</li>
@@ -489,8 +490,8 @@ Non perdere l'occasione di entrare a far parte di una delle comunità dedicate a
         </div>
       </li>
 
-      <li class='prtn-box col-sm-6'>
-        <div class='prtn-box-inner' style='height:870px'>
+      <li class='prtn-box col-sm-3'>
+        <div class='prtn-box-inner' style='height:1290px'>
           <h3>Linux Professionals Academic <br>PARTNER</h3>
           <div class='prtn-box-icon'>
             <img src='{% static "lpi/lpi-aap-pro.png" %}'>
@@ -502,7 +503,9 @@ Non perdere l'occasione di entrare a far parte di una delle comunità dedicate a
             IVA esclusa
           </div>
           <div class='prtn-box-desc'>
+            <p>
             Attraverso questo programma il partner pu&ograve; organizzare corsi di certificazione professionale su Linux. I corsi che possono essere erogati comprendono, oltre a Linux Essentials, le certificazioni LPIC-1, LPIC-2 ed LPIC-3.
+            </p>
 
             <h4>Benefit</h4>
             <ul class='prtn-box-bonus-list'>
@@ -526,17 +529,8 @@ Non perdere l'occasione di entrare a far parte di una delle comunità dedicate a
           </div>
         </div>
       </li>
-    </ul>
-
-  </div>
-
-  <div>
-    * Alla conclusione del primo corso il docente potra' svolgere l'esame gratuitamente
-  </div>
-  <div class="row" style='padding-top:30px'>
-    <ul>
-      <li class='prtn-box col-sm-6'>
-        <div class='prtn-box-inner' style='height:950px'>
+      <li class='prtn-box col-sm-3'>
+        <div class='prtn-box-inner' style='height:1290px'>
           <h3>Linux Essentials Academy<br>GOLD</h3>
           <div class='prtn-box-icon'>
             <img src='{% static "lpi/lpi-aap-le-gold.png" %}'>
@@ -548,8 +542,10 @@ Non perdere l'occasione di entrare a far parte di una delle comunità dedicate a
             IVA esclusa
           </div>
           <div class='prtn-box-desc'>
+            <p>
             Dedicato ai partner Linux Essentials che richiedono servizi aggiuntivi per l'avvio del corso.
             Servizi di supporto alla didattica formiti da ITHUM
+            </p>
             <h4>Benefit</h4>
             <ul class='prtn-box-bonus-list'>
                 <li>Disponibilita' utilizzo logo LPI AAP LE</li>
@@ -578,8 +574,8 @@ Non perdere l'occasione di entrare a far parte di una delle comunità dedicate a
         </div>
       </li>
 
-      <li class='prtn-box col-sm-6'>
-        <div class='prtn-box-inner' style='height:950px'>
+      <li class='prtn-box col-sm-3'>
+        <div class='prtn-box-inner' style='height:1290px'>
           <h3>Linux Essentials Academy<br>PLATINUM</h3>
           <div class='prtn-box-icon'>
             <img src='{% static "lpi/lpi-aap-le-platinum.png" %}'>
@@ -591,8 +587,10 @@ Non perdere l'occasione di entrare a far parte di una delle comunità dedicate a
             IVA esclusa
           </div>
           <div class='prtn-box-desc'>
+            <p>
             Dedicato ai partner Linux Essentials che richiedono servizi aggiuntivi per l'avvio del corso.
 Servizi premium di supporto alla didattica formiti da ITHUM.
+            </p>
 
 
             <h4>Benefit</h4>
